external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/index_autocomplete.exp
error[E15001]: IDE autocomplete
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:17:17
   │
17 │         let _ = &in.0.0[1]. ;
   │                 ^^^^^^^^^^^ Autocompletes to: '0'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:17:29
   │
17 │         let _ = &in.0.0[1]. ;
   │                             ^
   │                             │
   │                             Unexpected ';'
   │                             Expected an identifier or a decimal number

error[E15001]: IDE autocomplete
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:21:17
   │
21 │         let _ = &in.0.0[1].0[0]. ;
   │                 ^^^^^^^^^^^^^^^^ Autocompletes to: 

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:21:34
   │
21 │         let _ = &in.0.0[1].0[0]. ;
   │                                  ^
   │                                  │
   │                                  Unexpected ';'
   │                                  Expected an identifier or a decimal number

error[E15001]: IDE autocomplete
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:25:17
   │
25 │         let _ = &in.0.0[1].0[0]. ;
   │                 ^^^^^^^^^^^^^^^^ Autocompletes to: 'c' or 'd'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/index_autocomplete.move:25:34
   │
25 │         let _ = &in.0.0[1].0[0]. ;
   │                                  ^
   │                                  │
   │                                  Unexpected ';'
   │                                  Expected an identifier or a decimal number

